* Added in-memory H2 database. * Configured H2 db console. * Configure dao based authentication. * Created authentication interceptor in angualrjs.

--- a/SpringSecurityFormLogin/src/main/webapp/app/home/home.template.html
+++ b/SpringSecurityFormLogin/src/main/webapp/app/home/home.template.html
@@ -1,1 +1,14 @@
-Home Page.
+<span class="blue-text text-darken-2">
+	<h1 class="thin ">Welcome : {{username}}</h1>
+</span>
+
+<div id="flow-text-demo" class="card-panel">
+	<p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas est id odio mattis, id ultrices nisi aliquam. Donec vestibulum euismod urna, nec sodales lorem congue
+		eget. Quisque dictum interdum libero eu aliquam. Maecenas fringilla, ipsum quis euismod finibus, arcu ipsum faucibus tellus, vulputate congue mi tortor eget elit. Nunc bibendum imperdiet orci, non
+		tempor metus semper nec. </p>
+	<p class="flow-text">Nullam gravida porttitor neque, non cursus neque vehicula ut. Mauris faucibus dapibus aliquam. Aenean in tempor
+		turpis. Nulla tempor risus ligula, sed vulputate augue fermentum a. Praesent diam leo, finibus id consequat non, pellentesque ut arcu. Donec quis nisi ac elit fringilla interdum. Sed est elit,
+		aliquam sit amet quam ut, vulputate placerat nibh. Praesent luctus dapibus imperdiet.</p>
+</div>
+
+<a class="waves-effect waves-light btn-large" ng-click="logout()"><i class="material-icons left">info_outline</i>Logout</a>
