--- a/SpringSecurityFormLogin/src/main/webapp/app/login/login.template.html
+++ b/SpringSecurityFormLogin/src/main/webapp/app/login/login.template.html
@@ -1,30 +1,36 @@
 <div class="row">
-	<div class="col s8 m4 l6 offset-l3" style="border: solid 1px black; margin-top: 200px;">
-		<div class="card white darken-1">
+	<div class="col s8 m8 l6 offset-s2 offset-m2 offset-l3" style="margin-top: 200px;">
+
+		<div class="card z-depth-3">
 			<div class="card-content black-text">
 				<span class="card-title black-text">Login</span>
 				<div class="row">
-					<span ng-show="authError">Authentication failed</span>
 					<form class="col s12 m12 l12">
 						<div class="input-field">
-							<i class="material-icons prefix">account_circle</i>
-							<input id="icon_prefix" type="text" class="validate" ng-model="credentials.username"> 
-							<label for="icon_prefix">First Name</label>
+							<i class="material-icons prefix light-blue-text darken-1">account_circle</i>
+							<input id="email" type="text" class="validate" required ng-model="credentials.email"> 
+							<label for="email" data-error="">Email</label>
 						</div>
 						<div class="input-field">
-							<i class="material-icons prefix">lock</i> 
+							<i class="material-icons prefix light-blue-text darken-1">lock</i> 
 							<input id="password" type="password" class="validate" ng-model="credentials.password"> 
 							<label for="password">Password</label>
 						</div>
 					</form>
-					
 				</div>
 			</div>
+
+			<div class="progress" style="margin:0;" ng-show="loading" >
+				<div class="indeterminate"></div>
+			</div>
+
 			<div class="card-action right-align">
-				<button class="btn waves-effect waves-light" type="submit" name="action" ng-click="credentials.submitAction()">
+				<button class="btn waves-effect waves-light black" type="submit" name="action" ng-click="credentials.submitAction()">
 					Submit <i class="material-icons right">send</i>
 				</button>
 			</div>
+
+			
 		</div>
 	</div>
 </div>
